10_external_calls/front-proxy/front-envoy-jaeger.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 8000
    traffic_direction: OUTBOUND
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          generate_request_id: true
          tracing:
            provider:
              name: envoy.tracers.zipkin
              typed_config:
                "@type": type.googleapis.com/envoy.config.trace.v2.ZipkinConfig
                collector_cluster: jaeger
                collector_endpoint: "/api/v2/spans"
                shared_span_context: false
                collector_endpoint_version: HTTP_JSON
          codec_type: auto
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: backend
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: service1
                decorator:
                  operation: checkAvailability
          http_filters:
          - name: envoy.filters.http.tap
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.tap.v3.Tap
              common_config:
                static_config:
                  match_config:
                    any_match: true
                  output_config:
                    sinks:
                      - file_per_tap:
                          path_prefix: /tmp/any/
          - name: envoy.filters.http.ext_authz
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
              failure_mode_allow: false
              grpc_service:
                google_grpc:
                  target_uri: sign:9191
                  stat_prefix: ext_authz
                timeout: 0.5s
              include_peer_certificate: true
              metadata_context_namespaces:
              - envoy
              - envoy.common
          - name: envoy.filters.http.router
            typed_config: {}
          use_remote_address: true
          access_log:
          - name: envoy.access_loggers.file
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
              path: "/dev/stdout"
              typed_json_format: 
                "@timestamp": "%START_TIME%"
                client.address: "%DOWNSTREAM_REMOTE_ADDRESS%"
                client.certificate.local.subject: "%DOWNSTREAM_LOCAL_SUBJECT%"
                client.certificate.local_uri_san: "%DOWNSTREAM_LOCAL_URI_SAN%"
                client.certificate.peer.cert_v_end: "%DOWNSTREAM_PEER_CERT_V_END%"
                client.certificate.peer.cert_v_start: "%DOWNSTREAM_PEER_CERT_V_START%"
                client.certificate.peer.certificate: "%DOWNSTREAM_PEER_CERT%"
                client.certificate.peer.issuer: "%DOWNSTREAM_PEER_ISSUER%"
                client.certificate.peer.serial: "%DOWNSTREAM_PEER_SERIAL%"
                client.certificate.peer.uri_san: "%DOWNSTREAM_PEER_URI_SAN%"
                client.direct.remote.address: "%DOWNSTREAM_DIRECT_REMOTE_ADDRESS%"
                client.local.address: "%DOWNSTREAM_LOCAL_ADDRESS%"
                client.remote.address_no_port: "%DOWNSTREAM_REMOTE_ADDRESS_WITHOUT_PORT%"
                client.sni: "%REQUESTED_SERVER_NAME%"
                client.tls.cipher: "%DOWNSTREAM_TLS_CIPHER%"
                client.tls.session_id: "%DOWNSTREAM_TLS_SESSION_ID%"
                client.tls.version: "%DOWNSTREAM_TLS_VERSION%"
                envoy.route.name: "%ROUTE_NAME%"
                envoy.upstream.cluster: "%UPSTREAM_CLUSTER%"
                envoy.upstream.localaddress: "%UPSTREAM_LOCAL_ADDRESS%"
                envoy.upstream.transport_failure_reason: "%UPSTREAM_TRANSPORT_FAILURE_REASON%"
                host.hostname: "%HOSTNAME%"
                http.request.body.bytes: "%BYTES_RECEIVED%"
                http.request.duration: "%DURATION%"
                http.request.duration_req: "%REQUEST_DURATION%"
                http.request.headers.accept: "%REQ(ACCEPT)%"
                http.request.headers.authority: "%REQ(:AUTHORITY)%"
                http.request.headers.content-length: "%REQ(CONTENT-LENGTH)%"
                http.request.headers.content-type: "%REQ(CONTENT-TYPE)%"
                http.request.headers.host: "%REQ(HOST)%"
                http.request.headers.id: "%REQ(X-REQUEST-ID)%"
                http.request.headers.x_forwarded_for: "%REQ(X-FORWARDED-FOR)%"
                http.request.headers.x_forwarded_proto: "%REQ(X-FORWARDED-PROTO)%"
                http.request.headers.x_envoy_internal: "%REQ(X-ENVOY-INTERNAL)%"
                http.request.headers.x_envoy_decorator_operation: "%REQ(X-ENVOY-DECORATOR-OPERATION)%"
                http.request.headers.x_envoy_expected_rq_timeout_ms: "%REQ(X-ENVOY-EXPECTED-RQ-TIMEOUT-MS)%"
                http.request.headers.x_b3_traceid: "%REQ(X-B3-TRACEID)%"
                http.request.headers.x_b3_parentspanid: "%REQ(X-B3-PARENTSPANID)%"
                http.request.headers.x_b3_spanid: "%REQ(X-B3-SPANID)%"
                http.request.headers.x_b3_sampled: "%REQ(X-B3-SAMPLED)%"
                http.request.headers.actor_token: "%REQ(ACTOR-TOKEN)%"
                http.request.headers.app_token: "%REQ(APP-TOKEN)%"
                http.request.headers.subject_token: "%REQ(SUBJECT-TOKEN)%"
                http.request.headers.session_id: "%REQ(SESSION-ID)%"
                http.request.headers.request_id: "%REQ(REQUEST-ID)%"
                http.request.method: "%REQ(:METHOD)%"
                http.response.body.bytes: "%BYTES_SENT%"
                http.response.duration_resp: "%RESPONSE_DURATION%"
                http.response.duration_tx: "%RESPONSE_TX_DURATION%"
                http.response.flags: "%RESPONSE_FLAGS%"
                http.response.headers.access-control-allow-origin: "%RESP(ACCESS-CONTROL-ALLOW-ORIGIN)%"
                http.response.headers.content-length: "%RESP(CONTENT-LENGTH)%"
                http.response.headers.content-type: "%RESP(CONTENT-TYPE)%"
                http.response.headers.date: "%RESP(DATE)%"
                http.response.headers.server: "%RESP(SERVER)%"
                http.response.status_code: "%RESPONSE_CODE%"
                http.resposee.status_code_details: "%RESPONSE_CODE_DETAILS%"
                http.version: "%PROTOCOL%"
                log.level: "debug"  # default envoy log level is info
                network.direction: "inbound"
                server.address: "%UPSTREAM_HOST%"
                service.name: "envoy"
                service.version: "1.16"
                url.path: "%REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%"
                user_agent.name: "%REQ(USER-AGENT)%"
  clusters:
  - name: service1
    connect_timeout: 0.250s
    type: strict_dns
    lb_policy: round_robin
    http2_protocol_options: {}
    load_assignment:
      cluster_name: service1
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: service1
                port_value: 8000
  - name: jaeger
    connect_timeout: 1s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: jaeger
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: jaeger
                port_value: 9411
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
